# kovi-plugin-ciyi

./: Cargo.toml  README.md
res/: all_words.json  question_words.json
src/: ciyi_game.rs  lib.rs  p_command.rs  p_config.rs  p_const.rs  p_fn.rs
