[package]
name = "kovi-plugin-ciyi"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
description = "Kovi 的词意（猜词游戏）插件。"
categories = ["web-programming::http-client", "games"]
repository = "https://github.com/araea/kovi-plugin-ciyi"
keywords = ["kovi", "kovi-plugin", "ciyi", "word-guessing", "game"]

[dependencies]
kovi = ">= 0.12"
once_cell = "1.21"
fastrand = "2.3"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
